Customize input controls

--- a/src/BlazorFractals/Pages/Index.razor
+++ b/src/BlazorFractals/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h1>Fractal Generator</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+TBD
 
 <FractalPanel/>
