--- a/src/BlazorFractals/Shared/FractalPanel.razor
+++ b/src/BlazorFractals/Shared/FractalPanel.razor
@@ -8,28 +8,91 @@
 <div class="container">
     <form>
         <div class="form-row">
-            <div class="form-group col-md-6">
+            <div class="form-group col-md-4">
                 <label for="inputExpression">Expression</label>
                 <input type="text" class="form-control" id="inputExpression" placeholder="Expression" @bind="_expression"/>
-                <small id="expressionHelp" class="form-text text-muted">More complex expressions will take longer to process</small>
+                <small class="form-text text-muted">More complex expressions will take longer to process</small>
             </div>
-            <div class="form-group col-md-6">
-                <label for="inputSize">Image size</label>
-                <div class="form-inline" id="inputSize">
-                    <input type="text" class="form-control" placeholder="Width" @bind="_widthString"/>
-                    <input type="text" class="form-control" placeholder="Height" @bind="_heightString"/>
+            <div class="form-group col-md-4">
+                <label for="inputMultiplicity">Multiplicity</label>
+                <div class="input-group" id="inputMultiplicity">
+                    <input type="text" class="form-control" placeholder="Real Part" @bind="_multiplicityReal"/>
+                    <div class="input-group-prepend"><div class="input-group-text">+</div></div>
+                    <input type="text" class="form-control" placeholder="Imaginary Part" @bind="_multiplicityImaginary"/>
+                    <div class="input-group-append"><div class="input-group-text">i</div></div>
                 </div>
-                <small id="sizeHelp" class="form-text text-muted">Processing time greatly increases with image size</small>
+                <small class="form-text text-muted">Values different from (1,0) create interesting fractal variations but can need significantly more steps to converge</small>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputSize">Image size</label>
+                <div class="input-group" id="inputSize">
+                    <div class="input-group-prepend"><div class="input-group-text">Width</div></div>
+                    <input type="text" class="form-control" placeholder="Width" @bind="_options.PixelSize.Width"/>
+                    <div class="input-group-prepend"><div class="input-group-text">Height</div></div>
+                    <input type="text" class="form-control" placeholder="Height" @bind="_options.PixelSize.Height"/>
+                </div>
+                <small class="form-text text-muted">Processing time greatly increases with image size</small>
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group col-md-2">
+            <div class="form-group col-md-4">
                 <label for="inputColor">Background color</label>
-                <input type="color" class="form-control" id="inputColor" placeholder="Background color" @bind="_color"/>
+                <div class="input-group" id="inputColor" >
+                    <div class="input-group-prepend"><div class="input-group-text">@_color</div></div>
+                    <input type="color" class="form-control" placeholder="Background color" @bind="_color"/>
+                </div>
+                <small class="form-text text-muted">This gets used in non-converged areas</small>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputRealSize">Real bounds</label>
+                <div class="input-group" id="inputRealSize">
+                    <div class="input-group-prepend"><div class="input-group-text">Min</div></div>
+                    <input type="text" class="form-control" placeholder="Min X" @bind="_options.DomainSize.MinX"/>
+                    <div class="input-group-prepend"><div class="input-group-text">Max</div></div>
+                    <input type="text" class="form-control" placeholder="Max X" @bind="_options.DomainSize.MaxX"/>
+                </div>
+                <small class="form-text text-muted">The fractal will cover this domain in the real (x) axis</small>
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputImaginarySize">Imaginary bounds</label>
+                <div class="input-group" id="inputImaginarySize">
+                    <div class="input-group-prepend"><div class="input-group-text">Min</div></div>
+                    <input type="text" class="form-control" placeholder="Min Y" @bind="_options.DomainSize.MinY"/>
+                    <div class="input-group-prepend"><div class="input-group-text">Max</div></div>
+                    <input type="text" class="form-control" placeholder="Max Y" @bind="_options.DomainSize.MaxY"/>
+                </div>
+                <small class="form-text text-muted">The fractal will cover this domain in the imaginary (y) axis</small>
             </div>
         </div>
         <div class="form-row">
-            <div class="form-text col-md-10" style="color: darkred; font-weight: bold;">@_errorMessage</div>
+            <div class="form-group col-md-3">
+                <label for="inputIterations">Max iterations</label>
+                <input type="text" class="form-control" id="inputIterations" placeholder="Max iterations" @bind="_options.MaxIterations"/>
+                <small class="form-text text-muted">If this is exceeded, the background color will be used instead for that pixel</small>
+            </div>
+            <div class="form-group col-md-2">
+                <label for="inputPrecision">Precision</label>
+                <input type="text" class="form-control" id="inputPrecision" placeholder="Precision" @bind="_options.Precision"/>
+                <small class="form-text text-muted">Target error for converging to a solution</small>
+            </div>
+            <div class="form-group col-md-2">
+                <label for="inputDepth">Depth</label>
+                <input type="text" class="form-control" id="inputDepth" placeholder="Depth" @bind="_options.Depth"/>
+                <small class="form-text text-muted">Rate of change in brightness per iteration (can be negative)</small>
+            </div>
+            <div class="form-group col-md-3">
+                <label for="inputThreshold">Threshold</label>
+                <input type="text" class="form-control" id="inputThreshold" placeholder="Precision" @bind="_options.Threshold"/>
+                <small class="form-text text-muted">Depth will only be taken into account after this amount of iterations</small>
+            </div>
+            <div class="form-group col-md-2">
+                <label for="inputGradient">Gradient</label>
+                <input type="text" class="form-control" id="inputGradient" placeholder="Precision" @bind="_options.Gradient"/>
+                <small class="form-text text-muted">Factor to smoothen depth boundaries</small>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-text col-md-10" style="color: red; font-weight: bold;">@_errorMessage</div>
             <button class="btn btn-primary col-md-2" type="button" @onclick="GenerateImageAsync">Generate</button>
         </div>
     </form>
@@ -52,17 +115,21 @@
 
 @code
 {
-    private FractalOptions _options = new FractalOptions();
+    private FractalOptions _options = new FractalOptions
+    {
+        Depth = 15,
+        Gradient = 0.25f,
+    };
 
     private string _expression = "z^3+1";
 
+    private double _multiplicityReal = 1;
+
+    private double _multiplicityImaginary = 0;
+    
     private string _parsedExpression;
     
-    private string _widthString = "200";
-
-    private string _heightString = "200";
-
-    private string _color = "#123456";
+    private string _color = "#000000";
 
     private string _errorMessage;
     
@@ -85,18 +152,6 @@
             return;
         }
         
-        if (!int.TryParse(_widthString, out var width))
-        {
-            width = 500;
-        }
-
-        if (!int.TryParse(_heightString, out var height))
-        {
-            height = 500;
-        }
-
-        _options.PixelSize = new PixelSize(width, height);
-        _options.DomainSize = new DomainSize(-10, 10, -10, 10);
         _options.MaxIterations = 50;
         _options.Precision = 1e-5;
 
@@ -105,9 +160,10 @@
 
         _parsedExpression = element.ToString();
         
+        var func = element.ToNewtonFunction(new Complex(_multiplicityReal, _multiplicityImaginary)).ToFunc();
+        
         var webImage = await Task.Run(() =>
         {
-            var func = element.ToNewtonFunction(Complex.One).ToFunc();
             var fractal = MathUtils.Fractal(func, _options);
             var image = ImageUtils.GenerateImage(fractal.Contents);
             return image.ToWebImage();
