Remove elements from original layout

--- a/src/BlazorFractals/Pages/Index.razor
+++ b/src/BlazorFractals/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<h1>Fractal Generator</h1>
+<h1>Blazor Fractals</h1>
 
-TBD
+<a class="btn btn-primary" href="https://github.com/fernandreu/blazor-fractals">View Source on GitHub</a>
 
 <FractalPanel/>
