--- a/src/BlazorFractals/Pages/Index.razor
+++ b/src/BlazorFractals/Pages/Index.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
 
-<h1>Blazor Fractals</h1>
-
-<a class="btn btn-primary" href="https://github.com/fernandreu/blazor-fractals">View Source on GitHub</a>
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">Blazor Fractals</a>
+  <a class="btn btn-primary" href="https://github.com/fernandreu/blazor-fractals">View Source on GitHub</a>
+</nav>
 
 <FractalPanel/>
