Improve navbar layout

--- a/src/BlazorFractals/Pages/Index.razor
+++ b/src/BlazorFractals/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<nav class="navbar navbar-light bg-light">
+<nav class="navbar navbar-dark bg-dark mb-4">
   <a class="navbar-brand" href="#">Blazor Fractals</a>
   <a class="btn btn-primary" href="https://github.com/fernandreu/blazor-fractals">View Source on GitHub</a>
 </nav>
