--- a/src/BlazorFractals/Shared/FractalPanel.razor
+++ b/src/BlazorFractals/Shared/FractalPanel.razor
@@ -4,108 +4,131 @@
 @using SixLabors.ImageSharp.ColorSpaces.Conversion
 @using SixLabors.ImageSharp.PixelFormats
 @using System.Numerics
+@using System.Threading
 @using ApplicationCore.Exceptions
 @inject HttpClient Http
 
 <div class="container">
+
     <form>
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="inputExpression">Expression</label>
-                <input type="text" class="form-control" id="inputExpression" placeholder="Expression" @bind="_options.Expression"/>
-                <small class="form-text text-muted">More complex expressions will take longer to process</small>
-            </div>
-            <div class="form-group col-md-4">
-                <label for="inputMultiplicity">Multiplicity</label>
-                <div class="input-group" id="inputMultiplicity">
-                    <input type="text" class="form-control" placeholder="Real Part" @bind="_multiplicityReal"/>
-                    <div class="input-group-prepend"><div class="input-group-text">+</div></div>
-                    <input type="text" class="form-control" placeholder="Imaginary Part" @bind="_multiplicityImaginary"/>
-                    <div class="input-group-append"><div class="input-group-text">i</div></div>
+        <fieldset disabled="@_isGenerating">
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="inputExpression">Expression</label>
+                    <input type="text" class="form-control disabled" id="inputExpression" placeholder="Expression" @bind="_options.Expression"/>
+                    <small class="form-text text-muted">More complex expressions will take longer to process</small>
                 </div>
-                <small class="form-text text-muted">Values different from (1,0) create interesting fractal variations but can need significantly more steps to converge</small>
-            </div>
-            <div class="form-group col-md-4">
-                <label for="inputSize">Image size</label>
-                <div class="input-group" id="inputSize">
-                    <div class="input-group-prepend"><div class="input-group-text">Width</div></div>
-                    <input type="text" class="form-control" placeholder="Width" @bind="_options.PixelSize.Width"/>
-                    <div class="input-group-prepend"><div class="input-group-text">Height</div></div>
-                    <input type="text" class="form-control" placeholder="Height" @bind="_options.PixelSize.Height"/>
+                <div class="form-group col-md-4">
+                    <label for="inputMultiplicity">Multiplicity</label>
+                    <div class="input-group" id="inputMultiplicity">
+                        <input type="text" class="form-control" placeholder="Real Part" @bind="_multiplicityReal"/>
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">+</div></div>
+                        <input type="text" class="form-control" placeholder="Imaginary Part" @bind="_multiplicityImaginary"/>
+                        <div class="input-group-append">
+                            <div class="input-group-text">i</div></div>
+                    </div>
+                    <small class="form-text text-muted">Values different from (1,0) create interesting fractal variations but can need significantly more steps to converge</small>
                 </div>
-                <small class="form-text text-muted">Processing time greatly increases with image size</small>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-4">
-                <label for="inputColor">Background color</label>
-                <div class="input-group" id="inputColor" >
-                    <div class="input-group-prepend"><div class="input-group-text">@_color</div></div>
-                    <input type="color" class="form-control" placeholder="Background color" @bind="_color"/>
+                <div class="form-group col-md-4">
+                    <label for="inputSize">Image size</label>
+                    <div class="input-group" id="inputSize">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">Width</div></div>
+                        <input type="text" class="form-control" placeholder="Width" @bind="_options.PixelSize.Width"/>
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">Height</div></div>
+                        <input type="text" class="form-control" placeholder="Height" @bind="_options.PixelSize.Height"/>
+                    </div>
+                    <small class="form-text text-muted">Processing time greatly increases with image size</small>
                 </div>
-                <small class="form-text text-muted">This gets used in non-converged areas</small>
             </div>
-            <div class="form-group col-md-4">
-                <label for="inputRealSize">Real bounds</label>
-                <div class="input-group" id="inputRealSize">
-                    <div class="input-group-prepend"><div class="input-group-text">Min</div></div>
-                    <input type="text" class="form-control" placeholder="Min X" @bind="_options.DomainSize.MinX"/>
-                    <div class="input-group-prepend"><div class="input-group-text">Max</div></div>
-                    <input type="text" class="form-control" placeholder="Max X" @bind="_options.DomainSize.MaxX"/>
+            <div class="form-row">
+                <div class="form-group col-md-4">
+                    <label for="inputColor">Background color</label>
+                    <div class="input-group" id="inputColor">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">@_color</div></div>
+                        <input type="color" class="form-control" placeholder="Background color" @bind="_color"/>
+                    </div>
+                    <small class="form-text text-muted">This gets used in non-converged areas</small>
                 </div>
-                <small class="form-text text-muted">The fractal will cover this domain in the real (x) axis</small>
-            </div>
-            <div class="form-group col-md-4">
-                <label for="inputImaginarySize">Imaginary bounds</label>
-                <div class="input-group" id="inputImaginarySize">
-                    <div class="input-group-prepend"><div class="input-group-text">Min</div></div>
-                    <input type="text" class="form-control" placeholder="Min Y" @bind="_options.DomainSize.MinY"/>
-                    <div class="input-group-prepend"><div class="input-group-text">Max</div></div>
-                    <input type="text" class="form-control" placeholder="Max Y" @bind="_options.DomainSize.MaxY"/>
+                <div class="form-group col-md-4">
+                    <label for="inputRealSize">Real bounds</label>
+                    <div class="input-group" id="inputRealSize">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">Min</div></div>
+                        <input type="text" class="form-control" placeholder="Min X" @bind="_options.DomainSize.MinX"/>
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">Max</div></div>
+                        <input type="text" class="form-control" placeholder="Max X" @bind="_options.DomainSize.MaxX"/>
+                    </div>
+                    <small class="form-text text-muted">The fractal will cover this domain in the real (x) axis</small>
                 </div>
-                <small class="form-text text-muted">The fractal will cover this domain in the imaginary (y) axis</small>
+                <div class="form-group col-md-4">
+                    <label for="inputImaginarySize">Imaginary bounds</label>
+                    <div class="input-group" id="inputImaginarySize">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">Min</div></div>
+                        <input type="text" class="form-control" placeholder="Min Y" @bind="_options.DomainSize.MinY"/>
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">Max</div></div>
+                        <input type="text" class="form-control" placeholder="Max Y" @bind="_options.DomainSize.MaxY"/>
+                    </div>
+                    <small class="form-text text-muted">The fractal will cover this domain in the imaginary (y) axis</small>
+                </div>
             </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-md-3">
-                <label for="inputIterations">Max iterations</label>
-                <input type="text" class="form-control" id="inputIterations" placeholder="Max iterations" @bind="_options.MaxIterations"/>
-                <small class="form-text text-muted">If this is exceeded, the background color will be used instead for that pixel</small>
+            <div class="form-row">
+                <div class="form-group col-md-3">
+                    <label for="inputIterations">Max iterations</label>
+                    <input type="text" class="form-control" id="inputIterations" placeholder="Max iterations" @bind="_options.MaxIterations"/>
+                    <small class="form-text text-muted">If this is exceeded, the background color will be used instead for that pixel</small>
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="inputPrecision">Precision</label>
+                    <input type="text" class="form-control" id="inputPrecision" placeholder="Precision" @bind="_options.Precision"/>
+                    <small class="form-text text-muted">Target error for converging to a solution</small>
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="inputDepth">Depth</label>
+                    <input type="text" class="form-control" id="inputDepth" placeholder="Depth" @bind="_options.Depth"/>
+                    <small class="form-text text-muted">Rate of change in brightness per iteration (can be negative)</small>
+                </div>
+                <div class="form-group col-md-3">
+                    <label for="inputThreshold">Threshold</label>
+                    <input type="text" class="form-control" id="inputThreshold" placeholder="Precision" @bind="_options.Threshold"/>
+                    <small class="form-text text-muted">Depth will only be taken into account after this amount of iterations</small>
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="inputGradient">Gradient</label>
+                    <input type="text" class="form-control" id="inputGradient" placeholder="Precision" @bind="_options.Gradient"/>
+                    <small class="form-text text-muted">Factor to smoothen depth boundaries</small>
+                </div>
             </div>
-            <div class="form-group col-md-2">
-                <label for="inputPrecision">Precision</label>
-                <input type="text" class="form-control" id="inputPrecision" placeholder="Precision" @bind="_options.Precision"/>
-                <small class="form-text text-muted">Target error for converging to a solution</small>
+        </fieldset>
+        @if (_isGenerating)
+        {
+            <div class="form-row">
+                <div class="form-text col-md-10">Generating fractal image; please wait...</div>
+                <button class="btn btn-danger col-md-2" type="button" @onclick="CancelGeneration">Cancel</button>
             </div>
-            <div class="form-group col-md-2">
-                <label for="inputDepth">Depth</label>
-                <input type="text" class="form-control" id="inputDepth" placeholder="Depth" @bind="_options.Depth"/>
-                <small class="form-text text-muted">Rate of change in brightness per iteration (can be negative)</small>
+        }
+        else
+        {
+            <div class="form-row">
+                <div class="form-text col-md-8" style="color: red; font-weight: bold;">@_errorMessage</div>
+                <div class="form-check col-md-2">
+                    <input class="form-check-input" type="checkbox" id="inputLocally" @bind="_executeLocally">
+                    <label class="form-check-label" for="inputLocally">Run on browser</label>
+                </div>
+                <button class="btn btn-primary col-md-2" type="button" @onclick="GenerateImageAsync">Generate</button>
             </div>
-            <div class="form-group col-md-3">
-                <label for="inputThreshold">Threshold</label>
-                <input type="text" class="form-control" id="inputThreshold" placeholder="Precision" @bind="_options.Threshold"/>
-                <small class="form-text text-muted">Depth will only be taken into account after this amount of iterations</small>
-            </div>
-            <div class="form-group col-md-2">
-                <label for="inputGradient">Gradient</label>
-                <input type="text" class="form-control" id="inputGradient" placeholder="Precision" @bind="_options.Gradient"/>
-                <small class="form-text text-muted">Factor to smoothen depth boundaries</small>
-            </div>
-        </div>
-        <div class="form-row">
-            <div class="form-text col-md-8" style="color: red; font-weight: bold;">@_errorMessage</div>
-            <div class="form-check col-md-2">
-                <input class="form-check-input" type="checkbox" id="inputLocally" @bind="_executeLocally">
-                <label class="form-check-label" for="inputLocally">Run on browser</label>
-            </div>
-            <button class="btn btn-primary col-md-2" type="button" @onclick="GenerateImageAsync">Generate</button>
-        </div>
+        }
     </form>
-    
+
     @if (_parsedExpression != null)
     {
-        <div class="card" style="margin: 10px">
+        <div class="card m-4">
             <div class="card-body">
                 <p class="card-text">
                     <b>Parsed expression:</b> @_parsedExpression
@@ -113,7 +136,7 @@
             </div>
             @if (_imageSource != null)
             {
-                <img class="card-img-bottom" style="max-width: 100%; height: auto" src="@_imageSource" alt="Generated fractal"/>
+                <img class="card-img-bottom" src="@_imageSource" alt="Generated fractal"/>
             }
         </div>
     }
@@ -122,13 +145,16 @@
 
 @code
 {
-    
     private const string FunctionUrl = 
 #if DEBUG
         @"http://localhost:7071/api/FractalGenerator";
 #else
         @"https://fractalgenerator.azurewebsites.net/api/FractalGenerator";
 #endif
+
+    private bool _isGenerating = false;
+
+    private CancellationTokenSource _cancellation;
     
     private ExtendedFractalOptions _options = new ExtendedFractalOptions
     {
@@ -187,18 +213,39 @@
 
     private async Task GenerateLocally()
     {
+        _isGenerating = true;
+        await Task.Yield();
         var fractal = MathUtils.Fractal(_options);
         await Task.Yield();
         var image = ImageUtils.GenerateImage(fractal.Contents);
         await Task.Yield();
         var webImage = image.ToWebImage();
         _imageSource = webImage.Source;
+        _isGenerating = false;
     }
 
     private async Task GenerateInFunction()
     {
-        var response = await Http.PostAsJsonAsync(FunctionUrl, _options);
+        _cancellation = new CancellationTokenSource();
+        _isGenerating = true;
+        StateHasChanged();
+        
+        var response = await Http.PostAsJsonAsync(FunctionUrl, _options, _cancellation.Token);
+        _cancellation?.Dispose();
+        _cancellation = null;
+        
         var content = await response.Content.ReadAsStringAsync();
         _imageSource = content;
+        _isGenerating = false;
+        StateHasChanged();
+    }
+
+    private void CancelGeneration()
+    {
+        _cancellation?.Cancel();
+        _cancellation?.Dispose();
+        _cancellation = null;
+        _isGenerating = false;
+        StateHasChanged();
     }
 }
