--- a/src/BlazorFractals/Shared/MainLayout.razor
+++ b/src/BlazorFractals/Shared/MainLayout.razor
@@ -1,5 +1,9 @@
 ﻿@inherits LayoutComponentBase
 
+<div class="sidebar">
+    <NavMenu />
+</div>
+
 <div class="main">
     <div class="content">
         @Body
