--- a/src/BlazorFractals/Shared/NavMenu.razor
+++ b/src/BlazorFractals/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">BlazorFractals</a>
+    <a class="navbar-brand" href="">Blazor Fractals</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,14 +13,14 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="presets">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Presets
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
+            <a class="nav-link btn btn-outline-danger" href="https://github.com/fernandreu/blazor-fractals">
+                View source on GitHub
+            </a>
         </li>
     </ul>
 </div>
