--- a/src/BlazorFractals/wwwroot/css/app.css
+++ b/src/BlazorFractals/wwwroot/css/app.css
@@ -36,7 +36,7 @@ app {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(92, 14, 1) 0%, #9a340f 70%);
+    background-image: linear-gradient(180deg, rgb(56, 10, 0) 0%, #5e1b00 70%);
 }
 
 .sidebar .top-row {
@@ -83,6 +83,15 @@ app {
 
 .nav-item a:hover {
     background-color: rgba(255,255,255,0.1);
+    color: white;
+}
+
+.nav-item a.btn-light {
+    color: black;
+}
+
+.nav-item a.btn-light:hover {
+    background-color: rgba(255,255,255,0.25);
     color: white;
 }
 
